--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.6
+  animated_splash_screen: ^1.3.0
 
 dev_dependencies:
   flutter_test:
