--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,6 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.6
-  animated_splash_screen: ^1.3.0
 
 dev_dependencies:
   flutter_test:
@@ -27,4 +26,4 @@ flutter:
   uses-material-design: true
 
   assets:
-    - /assets/logos/
+    - assets/logos/
