New assets added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,3 +33,6 @@ flutter:
     - assets/logos/
     - assets/demo_friends_avatars/
     - assets/backgrounds/
+    - assets/users/
+    - assets/groups/
+    - assets/communities/
